[package]
name = "smartlink"
version = "0.1.0"
edition = "2021"
authors = [ "Nathan Royer <nathan.royer.pro@gmail.com>" ]
description = "Generate a header-like version of your crate"

[lib]
proc-macro = true

[features]
show_output = []

[dependencies]
proc-macro2 = "1.0.42"
syn = { version = "1.0.98", features = [ "full" ] }
quote = "1.0.20"
